# kpgres

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: binary_copy.rs  bind.rs  cancel_query.rs  cancel_query_raw.rs  cancel_token.rs  client.rs  codec.rs  config.rs  connect.rs  connect_raw.rs  connect_socket.rs  connect_tls.rs  connection.rs  copy_in.rs  copy_out.rs  generic_client.rs  lib.rs  maybe_tls_stream.rs  portal.rs  prepare.rs  query.rs  row.rs  simple_query.rs  socket.rs  statement.rs  tls.rs  to_statement.rs  transaction.rs  transaction_builder.rs  types.rs
src/error/: mod.rs  sqlstate.rs
