[package]
name = "kpgres"
version = "0.5.0"
authors = ["Steven Fackler <sfackler@gmail.com>", "Nikolay Kim <fafhrd91@gmail.com>",  "krircc <krircc@qq.com>"]
edition = "2018"
license = "MIT"
description = "A native, asynchronous PostgreSQL client for Kayrx"
repository = "https://github.com/kayrx/kpgres"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "async"]
categories = ["database"]

[dependencies]
kayrx = "0.7"
bytes = "0.5"
byteorder = "1.0"
fallible-iterator = "0.2"
futures = "0.3"
log = "0.4"
percent-encoding = "2.0"
pin-project-lite = "0.1"
phf = "0.8"
postgres-protocol  = "0.5.0"
postgres-types = "0.1.0" 
tokio = { version = "0.2", features = ["io-util", "time", "net"] }
tokio-util = { version = "0.2", features = ["codec"] }